classDiagram
    direction LR

    %% ================================================================
    %% OOD v2-2：FSM 父子狀態與 Composite Pattern 重點圖
    %% 解決 README 設計需求 -1 (3) 與 (4)：
    %%   - 任意深度子狀態機（Composite Pattern）
    %%   - 支援/取消支援子狀態機完全不改 FiniteStateMachine 既有程式碼（OCP 插件）
    %%   - 註解全數使用 <br/> 支援換行渲染
    %% ================================================================

    %% ------------------------------------------------
    %% 領域入口：Bot（FSM Context / 呼叫者）
    %% ------------------------------------------------
    class Bot {
        <<Context Client>>
        -rootFsm: FiniteStateMachine
        +onMessageReceived(message) void
        +onBroadcastStarted(speakerId) void
        +onBroadcastStopped(speakerId) void
        +onTimeElapsed(seconds) void
    }

    %% ------------------------------------------------
    %% FSM 事件傳遞與上下文
    %% ------------------------------------------------
    class Trigger {
        +name: String
        +payload: Map~String, Object~
    }

    class TransitionContext {
        +trigger: Trigger
        +fsm: FiniteStateMachine
        +target: Object
    }

    %% ------------------------------------------------
    %% 通用 FSM 引擎：Template Method 骨架
    %% ------------------------------------------------
    class FiniteStateMachine {
        <<Template Method>>
        -currentState: State
        -transitions: List~Transition~
        +fire(trigger: Trigger) bool
        +getCurrentState() State
        +changeState(nextState: State) void
    }

    %% ------------------------------------------------
    %% 複合模式 (Composite Pattern)：統一狀態介面
    %% ------------------------------------------------
    class State {
        <<interface, Composite Component>>
        +id: String
        +onEnter(context: TransitionContext) void
        +onExit(context: TransitionContext) void
        +handle(context: TransitionContext) bool
    }

    class AtomicState {
        <<abstract, Composite Leaf>>
        +id: String
        +onEnter(context) void
        +onExit(context) void
        +handle(context) bool
    }

    class CompositeState {
        <<Composite, Sub-FSM Plugin>>
        -innerFsm: FiniteStateMachine
        +onEnter(context) void
        +onExit(context) void
        +handle(context) bool
    }

    %% 具體葉狀態（社群機器人底層實際響應行為的葉節點）
    class DefaultConversationState { <<Leaf>> }
    class InteractingState { <<Leaf>> }
    class WaitingState { <<Leaf>> }
    class RecordingState { <<Leaf>> }
    class QuestioningState { <<Leaf>> }
    class ThanksForJoiningState { <<Leaf>> }

    %% 具體複合狀態（主狀態，各包一台內部子狀態機）
    class NormalState { <<Composite>> }
    class RecordState { <<Composite>> }
    class KnowledgeKingState { <<Composite>> }

    %% ------------------------------------------------
    %% 狀態轉移與策略模式：Transition + Guard + Action
    %% ------------------------------------------------
    class Transition {
        +fromState: State
        +toState: State
        +triggerName: String
        -guard: Guard
        -action: Action
        +tryHandle(context: TransitionContext) bool
    }

    class Guard {
        <<interface, Strategy>>
        +isSatisfied(context: TransitionContext) bool
    }

    class Action {
        <<interface, Strategy>>
        +execute(context: TransitionContext) void
    }

    %% 具體領域策略示例
    class HasQuotaGuard { <<Strategy>> }
    class OnlineCountGuard { <<Strategy>> }
    class IsBroadcastingGuard { <<Strategy>> }
    class DeductQuotaAction { <<Strategy>> }
    class ResetReplyCycleAction { <<Strategy>> }

    %% ------------------------------------------------
    %% 關聯與繼承結構
    %% ------------------------------------------------
    %% Bot 擁有根狀態機並派發 Trigger
    Bot "1" *-- "1" FiniteStateMachine : rootFsm
    Bot ..> Trigger : converts event
    Bot ..> TransitionContext : passes as target

    %% 上下文關聯
    FiniteStateMachine ..> TransitionContext : creates
    TransitionContext --> "1" Trigger : trigger
    TransitionContext --> "1" FiniteStateMachine : fsm

    %% FSM 引擎依賴抽象 State Component（符合 OCP，不認識 CompositeState）
    FiniteStateMachine "1" --> "1" State : currentState
    FiniteStateMachine "1" *-- "0..*" Transition : transitions
    Transition --> "1" State : fromState
    Transition --> "1" State : toState

    %% Composite 階層關係
    State <|.. AtomicState : implements
    State <|.. CompositeState : implements
    CompositeState "1" *-- "1" FiniteStateMachine : innerFsm (遞迴支援任意深度)

    %% 具體狀態歸屬
    AtomicState <|-- DefaultConversationState
    AtomicState <|-- InteractingState
    AtomicState <|-- WaitingState
    AtomicState <|-- RecordingState
    AtomicState <|-- QuestioningState
    AtomicState <|-- ThanksForJoiningState

    CompositeState <|-- NormalState
    CompositeState <|-- RecordState
    CompositeState <|-- KnowledgeKingState

    %% 策略關聯
    Transition o-- "0..1" Guard : condition
    Transition o-- "0..1" Action : side-effect
    Guard <|.. HasQuotaGuard
    Guard <|.. OnlineCountGuard
    Guard <|.. IsBroadcastingGuard
    Action <|.. DeductQuotaAction
    Action <|.. ResetReplyCycleAction

    %% ------------------------------------------------
    %% 設計說明 Notes
    %% ------------------------------------------------
    note for State "【Composite: Component 介面】<br/>抽象出狀態的統一生命週期（onEnter/onExit/handle）。<br/>FiniteStateMachine 引擎只認識 State 介面，<br/>無論外界目前操作的是單一葉狀態還是內含完整狀態機的複合狀態，<br/>皆以多型一致對待。"

    note for AtomicState "【Composite: Leaf 葉狀態】<br/>無內部狀態機的終端狀態（如 DefaultConversation、Recording）。<br/>直接執行該狀態的特定事件響應與回覆邏輯。"

    note for CompositeState "【Composite: Composite / 子狀態機插件】<br/>本身實作 State，內部卻持有另一台 FiniteStateMachine（innerFsm）。<br/>1. handle(context)：優先委派給 innerFsm.fire(trigger)；若子狀態機無相符轉移，才由母狀態轉移處理。<br/>2. onEnter(context)：觸發子狀態機的初始狀態進場。<br/>3. onExit(context)：觸發子狀態機當前狀態出場。<br/>遞迴結構天生支援『任意深度（子狀態機、子子狀態機...）』！"

    note for FiniteStateMachine "【OCP 對子狀態機插件的落實】<br/>FSM 引擎程式碼中完全沒有 `instanceof CompositeState` 或父子特判。<br/>子狀態機以『State 的一種新實作（CompositeState）』外掛存在。<br/>若系統不使用子狀態機，完全不引入 CompositeState 即可，<br/>達成 README 規定的插件化與 OCP。"
